--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="boolean-top w-100">
           <div class="container-fluid h-100">
             <div class="row d-flex flex-wrap align-items-center h-100">
-              <div class="col-6 order-2 order-lg-1">
+              <div class="col-lg-6 order-2 order-lg-1 mb-3 mb-lg-0">
                 <div class="row flex-column">
                   <div class="col d-flex align-items-center">
                     <p class="fs-3 color-white mb-0">Boolean</p>
@@ -154,13 +154,13 @@
                 </div>
               </div>
 
-              <div class="col-4 color-white order-3 order-lg-2">
+              <div class="col-lg-4 color-white order-3 order-lg-2 mb-3 mb-lg-0">
                 <p class="mb-0">Studenti online negli ultimi 30 minuti</p>
 
                 <p class="fs-4 mb-0">125</p>
               </div>
 
-              <div class="col-2 d-flex align-items-center color-white order-1 order-lg-3">
+              <div class="col-lg-2 d-flex align-items-center color-white order-1 order-lg-3 my-3 my-lg-0">
                 <p class="mb-0">Nuovo studente</p>
 
                 <button type="button" class="btn btn-outline-light ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">+</button>
